--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-SUPABASE_URL=https://qihsgnfjqmkjmoowyfbn.supabase.co
-SUPABASE_ANON_KEY=your_anon_key
+NEXT_PUBLIC_SUPABASE_URL=https://qihsgnfjqmkjmoowyfbn.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key
 SUPABASE_TABLE=captions
